Fix numbers overflowing the display

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 html {
   font-family: "DM Mono", monospace;
-  font-size: 34px;
+  font-size: 32px;
   color: var(--text-color);
   box-sizing: border-box;
 }
